--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,45 @@
-/node_modules
+node_modules/
+npm-debug.log
 
+# local env files
 .env
+.env.*
+
+# logs
+logs
+*.log
+npm-debug.log*
+
+# dependencies
+/dist
+/tmp
+/build
+
+# tests
+/tests/tmp
+/tests/logs
+/tests/coverage
+
+# IDEs and editors
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# e2e test artifacts
+/e2e/reports/
+
+# generated static files
+/public/static/
+
+# dist files
+/dist/
